--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi>=0.68.0
-uvicorn[standard]>=0.15.0
-httpx>=0.23.0
-beautifulsoup4>=4.12.2
-tenacity>=8.2.2
-lxml>=4.9.2
-pydantic>=1.10.7,<2.0.0
+uvicorn>=0.15.0
+httpx>=0.18.0
+beautifulsoup4>=4.9.0
+tenacity>=8.0.0
+pydantic>=1.8.0
 python-multipart>=0.0.5
